<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_name" />

    <EditText
        android:id="@+id/editText_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editl_surname" />

    <EditText
        android:id="@+id/editText_marks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText_surname"
        android:layout_alignParentTop="true"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_marks" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="63dp"
        android:layout_toStartOf="@+id/editText_name"
        android:text="@string/text_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="62dp"
        android:layout_toStartOf="@+id/editText_surname"
        android:gravity="center"
        android:text="@string/text_surname" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="68dp"
        android:layout_toStartOf="@+id/editText_marks"
        android:text="@string/text_marks" />

    <Button
        android:id="@+id/button_addData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="189dp"
        android:text="@string/add_data" />

    <Button
        android:id="@+id/button_viewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_addData"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="43dp"
        android:text="@string/view_all" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="113dp"
        android:text="@string/update" />

    <TextView
        android:id="@+id/text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="217dp"
        android:text="@string/text_id" />

    <EditText
        android:id="@+id/editText_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_viewAll"
        android:layout_alignParentTop="true"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="-139dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/edit_id" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_id"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-10dp"
        android:layout_marginBottom="114dp"
        android:text="@string/delete" />

</RelativeLayout>